basic tests of the public facing HTTP interface. refs #16, #113, #342, https://github.com/mro/ShaarliOS/issues/1
Transferred from https://github.com/mro/Shaarli-API-test, could become a git module for version-independant compatibility tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,16 @@ php:
   - 5.6
   - 5.5
   - 5.4
-  - 5.3
+#  - 5.3 doesn't provide a 'php' webserver as required in tests/api/run.sh
 install:
   - composer self-update
   - composer install
+addons:
+  apt:
+    packages:
+    - xsltproc
 script:
   - make clean
   - make check_permissions
   - make test
+  - sh tests/api/run.sh
