--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
   - 5.6
   - 5.5
   - 5.4
-#  - 5.3 doesn't provide a 'php' webserver as required in tests/api/run.sh
+  - 5.3 # doesn't provide a 'php' webserver as required in tests/api/run.sh
 install:
   - composer self-update
   - composer install
@@ -13,8 +13,23 @@ addons:
   apt:
     packages:
     - xsltproc
+env:
+  - HTTPTEST=1
+  - HTTPTEST=0
+matrix:
+  exclude:
+    - php: 5.3
+      env: HTTPTEST=1
+    - php: 5.4
+      env: HTTPTEST=0
+    - php: 5.5
+      env: HTTPTEST=0
+    - php: 5.6
+      env: HTTPTEST=0
+    - php: 7.0
+      env: HTTPTEST=0
 script:
   - make clean
   - make check_permissions
   - make test
-  - sh tests/api/run.sh
+  - if [[ $HTTPTEST == 1 ]]; then sh tests/api/run.sh; fi
