--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
             "Shaarli\\Api\\": "application/api/",
             "Shaarli\\Api\\Controllers\\": "application/api/controllers",
             "Shaarli\\Api\\Exceptions\\": "application/api/exceptions",
+            "Shaarli\\Ajax\\": "application/ajax/",
             "Shaarli\\Config\\": "application/config/",
             "Shaarli\\Config\\Exception\\": "application/config/exception"
         }
