--- a/.editorconfig
+++ b/.editorconfig
@@ -8,13 +8,13 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
-indent_size = 4
 
-[*.{htaccess,html,xml}]
+[*.{htaccess,html,xml,js,html}]
 indent_size = 2
 
 [*.php]
 max_line_length = 100
+indent_size = 4
 
 [Dockerfile]
 max_line_length = 80
