--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ php:
   - 5.6
   - 5.5
 install:
+  - yarn install
   - yarn run build
   - composer self-update
   - composer install --prefer-dist
