--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ dist: bionic
 matrix:
   include:
     - language: php
-      php: 7.4
+      php: nighly
     - language: php
-      php: 8.0
+      php: 7.4
     - language: php
       php: 7.3
     - language: php
