--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     "keywords": ["bookmark", "link", "share", "web"],
     "config": {
         "platform": {
-            "php": "7.1.29"
+            "php": "7.2.29"
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "ext-json": "*",
         "ext-zlib": "*",
         "shaarli/netscape-bookmark-parser": "^2.1",
@@ -27,9 +27,8 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "phpunit/phpcov": "*",
-        "phpunit/phpunit": "^7.5",
-        "squizlabs/php_codesniffer": "3.*"
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "^8.0"
     },
     "suggest": {
         "ext-curl": "Allows fetching web pages and thumbnails in a more robust way",
