--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "keywords": ["bookmark", "link", "share", "web"],
     "config": {
         "platform": {
-            "php": "7.2.29"
+            "php": "7.1.29"
         }
     },
     "require": {
@@ -28,7 +28,7 @@
     "require-dev": {
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "^8.0"
+        "symfony/phpunit-bridge": "^5.1"
     },
     "suggest": {
         "ext-curl": "Allows fetching web pages and thumbnails in a more robust way",
