--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ matrix:
 #        - composer self-update --2
 #        - composer update --ignore-platform-req=php
         - composer install
-        - composer remove --dev --ignore-platform-req=php phpunit/phpunit
-        - composer require --dev --ignore-platform-req=php phpunit/php-text-template ^2.0
-        - composer require --dev --ignore-platform-req=php phpunit/phpunit ^9.0
+        - composer remove  --dev phpunit/phpunit
+        - composer require --dev phpunit/php-text-template ^2.0
+        - composer require --dev phpunit/phpunit ^9.0
     - language: php
       php: 7.4
     - language: php
